aula 4 - basico pandas

--- a/modulo1/02_revisao_python.ipynb
+++ b/modulo1/02_revisao_python.ipynb
@@ -304,10 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from primo import prime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number = int(input(\"Digite o número: \"))\n",
+    "prime(number)"
+   ]
   }
  ],
  "metadata": {
